# UdeS-Robotics-ROS

libs/motor_model/motor_cst/: motor_cst.ino
libs/motor_model/motor_model_arduino_firmware/: motor_model_arduino_firmware.ino
libs/motor_model/motor_model_voltage_inputs/: CMakeLists.txt  package.xml
libs/motor_model/motor_model_voltage_inputs/launch/: model_param_acc.launch
libs/motor_model/motor_model_voltage_inputs/src/: voltage_inputs.py
libs/sensors/encoders/: CMakeLists.txt  package.xml
libs/sensors/encoders/encoders_arduino_firmware/: encoders_arduino_firmware.ino
libs/sensors/encoders/launch/: encoders.launch
projects/slash/: Untitled Document  discrete_model.py
projects/slash/slash-localization/: CMakeLists.txt
projects/slash/slash-master/: CMakeLists.txt  package.xml
projects/slash/slash-teleop/: CMakeLists.txt  package.xml
projects/slash/slash-vision/: package.xml
projects/slash/slash_controller/: CMakeLists.txt  package.xml
projects/slash/slash_datalogging/: CMakeLists.txt  READ_ME  package.xml
projects/slash/slash_instructions/: READ ME - How to program an ESC  READ ME - How to use the teleoperation  READ_ME - How to use the bag to xlsx converter
projects/slash/slash_localization/: package.xml
projects/slash/slash_master/: CMakeLists.txt  package.xml
projects/slash/slash_planif/: CMakeLists.txt  package.xml
projects/slash/slash_propulsion/: CMakeLists.txt  package.xml
projects/slash/slash_teleop/: CMakeLists.txt  READ ME - How to use the teleoperation  package.xml
projects/slash/slash_vision/: CMakeLists.txt
(+257 files in other folders)
